frontmatter.. title etc.. also changed spacing

--- a/frontmatter/coverpage.tex
+++ b/frontmatter/coverpage.tex
@@ -1,16 +1,16 @@
 % some details about the thesis
-\title{This is the title of the thesis}
-\author{Author's name}
-\advisor{Advisor's name}
+\title{Optogenetics and image processing applications for behavioral neuroscience }
+\author{Andrew Michael Leifer}
+\advisor{Aravinthan D. T. Samuel}
 
 % about the degree
 \degree{Doctor of Philosophy}
-\field{Subject}
-\degreeyear{Year}
-\degreemonth{Month}
+\field{Biophysics}
+\degreeyear{2011}
+\degreemonth{December}
 
 % about the university
-\department{Department}
+\department{Committee on Higher Degrees in Biophysics}
 \university{Harvard University}
 \universitycity{Cambridge}
 \universitystate{Massachusetts}
