front matter. diedication.. first things

--- a/harvard-thesis.cls
+++ b/harvard-thesis.cls
@@ -70,16 +70,15 @@
 \def\universitystate#1{\gdef\@universitystate{#1}}
 
 \renewcommand{\maketitle}{ 
-	\thispagestyle{empty}\sc
-	\vspace*{\fill} \begin{center}
+	\thispagestyle{empty}\vspace*{\fill} 
+	\begin{center}
 	\huge \thetitle \normalsize \\ \vspace{100pt}
-	a dissertation presented \\ by\\
+	A dissertation presented \\ by\\
 	\theauthor\\ to\\ The \@department\\ 
-	\vspace{12pt}
 	in partial fulfillment of the requirements\\ 
 	for the degree of\\ \@degree\\ 
 	in the subject of\\ \@field\\
-	\vspace{12pt}
+	\vspace{24pt}
 	\@university\\ \@universitycity, \@universitystate\\ 
 	\@degreemonth\ \@degreeyear
 	\end{center} \vspace*{\fill}
@@ -87,7 +86,7 @@
 
 \newcommand{\copyrightpage}{
 	\newpage \thispagestyle{empty} \vspace*{\fill}
-	\sc \noindent \copyright \degreeyear, \theauthor \\
+	\noindent \copyright \degreeyear, \theauthor \\
 	All rights reserved.
 	\vspace*{\fill} \newpage \rm
 }
