--- a/frontmatter/coverpage.tex
+++ b/frontmatter/coverpage.tex
@@ -1,5 +1,5 @@
 % some details about the thesis
-\title{Optogenetics and image processing applications for behavioral neuroscience }
+\title{Optogenetics and image processing for neuroscience applications}
 \author{Andrew Michael Leifer}
 \advisor{Aravinthan D. T. Samuel}
 
