--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,3 +1,45 @@
 % the acknowledgments section
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit. Nulla facilisi. Nulla libero. Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum. Donec porttitor ligula eu dolor. Maecenas vitae nulla consequat libero cursus venenatis. Nam magna enim, accumsan eu, blandit sed, blandit a, eros.
+
+This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
+
+This dissertation is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. XXXXX.
+
+Biophysics:
+  Jim Hogle
+  Michele Jakoulov
+
+Advisor:
+  Aravi Samuel
+
+Family:
+  Mark and Anne
+
+Samuel Lab:
+  Marc Gershow
+  Mason Klein
+  Quan Wen
+  Liz Kane and others
+
+Chris Fang Yen
+
+Collaborators:
+   Chris Clark, Mark Alkema
+   Adam Bahrami, Michael Hendriks in Yun Zhang lab
+   Ed Boyden
+   
+Ben Schwarts for many fruitful discussions.
+
+Dissertation Advisary Committee Members:
+   Adam Cohen
+   Ed Boyden
+   Mark Alkema
+   Markus Meister
+   
+Thesis Committee:
+	Markus Meister
+	Yun Zhang
+	Florian Engert
+
+Franziska Graf.
