start filling out colbert Paper. set plainnat styleguide

--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,6 @@
 
 % the back matter
 \bibliography{references}
-\nocite{*}
-\bibliographystyle{apalike}
+\bibliographystyle{plainnat}
 
 \end{document}
