added more intro from colbert paper

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -4,7 +4,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum s
 
 This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
 
-This dissertation is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. XXXXX.
+This dissertation is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. DGE-0644491.
 
 Biophysics:
   Jim Hogle
