--- a/references.bib
+++ b/references.bib
@@ -163,6 +163,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {17376--17381}
 },
 
+@article{chow_high-performance_2010,
+	title = {High-performance genetically targetable optical neural silencing by light-driven proton pumps},
+	volume = {463},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20054397},
+	doi = {10.1038/nature08652},
+	abstract = {The ability to silence the activity of genetically specified neurons in a temporally precise fashion would provide the opportunity to investigate the causal role of specific cell classes in neural computations, behaviours and pathologies. Here we show that members of the class of light-driven outward proton pumps can mediate powerful, safe, multiple-colour silencing of neural activity. The gene archaerhodopsin-3 {(Arch)} from Halorubrum sodomense enables near-100\% silencing of neurons in the awake brain when virally expressed in the mouse cortex and illuminated with yellow light. Arch mediates currents of several hundred picoamps at low light powers, and supports neural silencing currents approaching 900 {pA} at light powers easily achievable in vivo. Furthermore, Arch spontaneously recovers from light-dependent inactivation, unlike light-driven chloride pumps that enter long-lasting inactive states in response to light. These properties of Arch are appropriate to mediate the optical silencing of significant brain volumes over behaviourally relevant timescales. Arch function in neurons is well tolerated because {pH} excursions created by Arch illumination are minimized by self-limiting mechanisms to levels comparable to those mediated by channelrhodopsins or natural spike firing. To highlight how proton pump ecological and genomic diversity may support new innovation, we show that the blue-green light-drivable proton pump from the fungus Leptosphaeria maculans {(Mac)} can, when expressed in neurons, enable neural silencing by blue light, thus enabling alongside other developed reagents the potential for independent silencing of two neural populations by blue versus red light. Light-driven proton pumps thus represent a high-performance and extremely versatile class of 'optogenetic' voltage and ion modulator, which will broadly enable new neuroscientific, biological, neurological and psychiatric investigations.},
+	number = {7277},
+	journal = {Nature},
+	author = {Chow, Brian Y and Han, Xue and Dobry, Allison S and Qian, Xiaofeng and Chuong, Amy S and Li, Mingjie and Henninger, Michael A and Belfort, Gabriel M and Lin, Yingxi and Monahan, Patrick E and Boyden, Edward S},
+	month = jan,
+	year = {2010},
+	note = {{PMID:} 20054397},
+	keywords = {Action Potentials, Animals, Ascomycota, Color, Electric Conductivity, Euryarchaeota, Genetic Engineering, {Hydrogen-Ion} Concentration, Mice, Molecular Sequence Data, Neocortex, Neurons, Proton Pumps, Rhodopsins, Microbial, Wakefulness},
+	pages = {98--102}
+},
+
 @article{hart_synaptic_1995,
 	title = {Synaptic code for sensory modalities revealed by C. elegans {GLR-1} glutamate receptor},
 	volume = {378},
@@ -206,6 +223,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	note = {{PMID:} 16116447},
 	keywords = {Action Potentials, Algal Proteins, Animals, Animals, Newborn, Cells, Cultured, {Dose-Response} Relationship, Radiation, Electric Stimulation, Electrophysiology, Excitatory Amino Acid Antagonists, {GABA} Antagonists, Green Fluorescent Proteins, Hippocampus, Ion Channel Gating, Ion Channels, Neural Inhibition, Neurons, Optics and Photonics, Photobiology, Pyridazines, Quinoxalines, Rats, Rats, {Sprague-Dawley}, Reaction Time, Reproducibility of Results, Rhodopsin, Synaptic Transmission, Time Factors, Transfection},
 	pages = {1263--1268}
+},
+
+@article{szobota_remote_2007,
+	title = {Remote control of neuronal activity with a light-gated glutamate receptor},
+	volume = {54},
+	issn = {0896-6273},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/17521567},
+	doi = {10.1016/j.neuron.2007.05.010},
+	abstract = {The ability to stimulate select neurons in isolated tissue and in living animals is important for investigating their role in circuits and behavior. We show that the engineered light-gated ionotropic glutamate receptor {(LiGluR)}, when introduced into neurons, enables remote control of their activity. Trains of action potentials are optimally evoked and extinguished by 380 nm and 500 nm light, respectively, while intermediate wavelengths provide graded control over the amplitude of depolarization. Light pulses of 1-5 ms in duration at approximately 380 nm trigger precisely timed action potentials and {EPSP-like} responses or can evoke sustained depolarizations that persist for minutes in the dark until extinguished by a short pulse of approximately 500 nm light. When introduced into sensory neurons in zebrafish larvae, activation of {LiGluR} reversibly blocks the escape response to touch. Our studies show that {LiGluR} provides robust control over neuronal activity, enabling the dissection and manipulation of neural circuitry in vivo.},
+	number = {4},
+	journal = {Neuron},
+	author = {Szobota, Stephanie and Gorostiza, Pau and Del Bene, Filippo and Wyart, Claire and Fortin, Doris L and Kolstad, Kathleen D and Tulyathan, Orapim and Volgraf, Matthew and Numano, Rika and Aaron, Holly L and Scott, Ethan K and Kramer, Richard H and Flannery, John and Baier, Herwig and Trauner, Dirk and Isacoff, Ehud Y},
+	month = may,
+	year = {2007},
+	note = {{PMID:} 17521567},
+	keywords = {Action Potentials, Animals, Animals, Genetically Modified, Animals, Newborn, Behavior, Animal, Cells, Cultured, Cysteine, {Dose-Response} Relationship, Radiation, Electric Stimulation, Excitatory Postsynaptic Potentials, Hippocampus, Larva, Leucine, Lighting, Mutation, Neurons, {Patch-Clamp} Techniques, Physical Stimulation, Rats, Receptors, Kainic Acid, Transfection, Zebrafish},
+	pages = {535--545}
 },
 
 @article{suzuki_topological_1985,
@@ -577,7 +611,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	howpublished = {https://mail.google.com/mail/?shva=1\#inbox/121d594850194dab}
 },
 
-@article{szobota_remote_2007,
+@article{szobota_remote_2007-1,
 	title = {Remote Control of Neuronal Activity with a {Light-Gated} Glutamate Receptor},
 	volume = {54},
 	issn = {0896-6273},
@@ -607,9 +641,9 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 },
 
 @article{kitamura_contribution_2001,
-	title = {Contribution of neurons to habituation to mechanical stimulation in {{\textless}I{\textgreater}Caenorhabditis} {elegans{\textless}/I{\textgreater}}},
+	title = {Contribution of neurons to habituation to mechanical stimulation in Caenorhabditis elegans},
 	volume = {46},
-	url = {http://dx.doi.org.ezp-prod1.hul.harvard.edu/10.1002/1097-4695(200101)46:1%3C29::AID-NEU3%3E3.0.CO;2-8},
+	url = {http://dx.doi.org/10.1002/1097-4695(200101)46:1%3C29::AID-NEU3%3E3.0.CO;2-8},
 	doi = {10.1002/1097-4695(200101)46:1<29::AID-NEU3>3.0.CO;2-8},
 	abstract = {In Caenorhabditis elegans, a light touch induces a locomotor response. Repeated touches, however, result in an attenuation of response, that is, habituation. Withdrawal responses elicited by anterior touch are controlled by anterior mechanosensory neurons {(AVM} and {ALMs)}, and by four pairs of interneurons {(AVA}, {AVB}, {AVD}, and {PVC)} {(Chalfie} et al., 1985; White et al., 1986). To identify the neurons that participate in habituation, we ablated these neurons with a laser microbeam and investigated the resulting habituation of the operated animals. The animals lacking both left and right homologues {AVDLR} were habituated more rapidly than intact animals. We propose that chemical synapses at {AVD} play a critical role in the habituation of intact animals. © 2000 John Wiley \& Sons, Inc. J Neurobiol 46: 29-40, 2001},
 	number = {1},
@@ -648,6 +682,23 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	year = {1986},
 	keywords = {circuitry, {PQE}  - definite citation},
 	pages = {1--340}
+},
+
+@article{wyart_optogenetic_2009,
+	title = {Optogenetic dissection of a behavioural module in the vertebrate spinal cord},
+	volume = {461},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19759620},
+	doi = {10.1038/nature08323},
+	abstract = {Locomotion relies on neural networks called central pattern generators {(CPGs)} that generate periodic motor commands for rhythmic movements. In vertebrates, the excitatory synaptic drive for inducing the spinal {CPG} can originate from either supraspinal glutamatergic inputs or from within the spinal cord. Here we identify a spinal input to the {CPG} that drives spontaneous locomotion using a combination of intersectional gene expression and optogenetics in zebrafish larvae. The photo-stimulation of one specific cell type was sufficient to induce a symmetrical tail beating sequence that mimics spontaneous slow forward swimming. This neuron is the {Kolmer-Agduhr} cell, which extends cilia into the central cerebrospinal-fluid-containing canal of the spinal cord and has an ipsilateral ascending axon that terminates in a series of consecutive segments. Genetically silencing {Kolmer-Agduhr} cells reduced the frequency of spontaneous free swimming, indicating that activity of {Kolmer-Agduhr} cells provides necessary tone for spontaneous forward swimming. {Kolmer-Agduhr} cells have been known for over 75 years, but their function has been mysterious. Our results reveal that during early development in zebrafish these cells provide a positive drive to the spinal {CPG} for spontaneous locomotion.},
+	number = {7262},
+	journal = {Nature},
+	author = {Wyart, Claire and Del Bene, Filippo and Warp, Erica and Scott, Ethan K and Trauner, Dirk and Baier, Herwig and Isacoff, Ehud Y},
+	month = sep,
+	year = {2009},
+	note = {{PMID:} 19759620},
+	keywords = {Animals, Animals, Genetically Modified, Axons, Cilia, Female, Larva, Light, Locomotion, Male, Models, Neurological, Neurons, Spinal Cord, Swimming, Tail, Zebrafish},
+	pages = {407--410}
 },
 
 @article{croll_behavoural_1975,
@@ -1086,6 +1137,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMC2430527}},
 	keywords = {Caenorhabditis elegans, Locomotion, pdms, Touch},
 	pages = {e2550}
+},
+
+@article{wicks_dynamic_1996,
+	title = {A dynamic network simulation of the nematode tap withdrawal circuit: predictions concerning synaptic function using behavioral criteria},
+	volume = {16},
+	issn = {0270-6474},
+	shorttitle = {A dynamic network simulation of the nematode tap withdrawal circuit},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/8656295},
+	abstract = {The nematode tap withdrawal reflex demonstrates several forms of behavioral plasticity. Although the neural connectivity that supports this behavior is identified {(Integration} of mechanosensory stimuli in Caenorhabditis elegans, Wicks and Rankin, 1995, J Neurosci 15:2434-2444), the neurotransmitter phenotypes, and hence whether the synapses in the circuit are excitatory or inhibitory, remain uncharacterized. Here we use a novel strategy to predict the polarity configuration, i.e., the array of excitatory and inhibitory connections, of the nematode tap withdrawal circuit using an anatomically and physiologically justifiable dynamic network simulation of that circuit. The output of the modeled circuit was optimized to the behavior of animals, which possessed circuits altered by surgical ablation by exhaustively enumerating an array of synaptic signs that constituted the modeled circuit. All possible polarity configurations were then compared, and a statistical analysis was used to determine whether, for a given synaptic class, a particular polarity was associated with a good fit to behavioral data. The results from four related experiments were used to predict the polarities of seven of the nine cell classes of the tap withdrawal circuit. In addition, the model was used to assess possible roles for two novel mechanosensory integration neurons: {DVA} and {PVD.}},
+	number = {12},
+	journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
+	author = {Wicks, S R and Roehrig, C J and Rankin, C H},
+	month = jun,
+	year = {1996},
+	note = {{PMID:} 8656295},
+	keywords = {Animals, Behavior, Animal, Caenorhabditis elegans, Mechanoreceptors, Models, Neurological, Synapses},
+	pages = {4017--4031}
 },
 
 @article{chiu_flying_2008,
@@ -1710,23 +1778,6 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {239--255}
 },
 
-@article{nagel_light_2005-1,
-	title = {Light Activation of Channelrhodopsin-2 in Excitable Cells of Caenorhabditis elegans Triggers Rapid Behavioral Responses},
-	volume = {15},
-	issn = {0960-9822},
-	url = {http://www.sciencedirect.com.ezp-prod1.hul.harvard.edu/science/article/B6VRT-4HV7CDJ-W/2/c2d98908e8dbee2808aa298cf3c7e0d2},
-	doi = {10.1016/j.cub.2005.11.032},
-	abstract = {Summary
-For studying the function of specific neurons in their native circuitry, it is desired to precisely control their activity. This often requires dissection to allow accurate electrical stimulation [1] or neurotransmitter application [2], and it is thus inherently difficult in live animals, especially in small model organisms. Here, we employed channelrhodopsin-2 {(ChR2)}, a directly light-gated cation channel from the green alga Chlamydomonas reinhardtii [3], in excitable cells of the nematode Caenorhabditis elegans, to trigger specific behaviors, simply by illumination. Channelrhodopsins 3 and 4 are 7-transmembrane-helix proteins that resemble the light-driven proton pump bacteriorhodopsin [5], and they also utilize the chromophore all-trans retinal, but to open an intrinsic cation pore. In muscle cells, light-activated {ChR2} evoked strong, simultaneous contractions, which were reduced in the background of mutated L-type, voltage-gated Ca2+-channels {(VGCCs)} and ryanodine receptors {(RyRs).} Electrophysiological analysis demonstrated rapid inward currents that persisted as long as the illumination. When {ChR2} was expressed in mechanosensory neurons, light evoked withdrawal behaviors that are normally elicited by mechanical stimulation. Furthermore, {ChR2} enabled activity of these neurons in mutants lacking the {MEC-4/MEC-10} mechanosensory ion channel [6]. Thus, specific neurons or muscles expressing {ChR2} can be quickly and reversibly activated by light in live and behaving, as well as dissected, animals.},
-	number = {24},
-	journal = {Current Biology},
-	author = {Nagel, Georg and Brauner, Martin and Liewald, Jana F. and Adeishvili, Nona and Bamberg, Ernst and Gottschalk, Alexander},
-	month = dec,
-	year = {2005},
-	keywords = {Caenorhabditis elegans, Channelrhodopsin, {MOLNEURO}, {SIGNALING}},
-	pages = {2279--2284}
-},
-
 @article{han_multiple-color_2007,
 	title = {{Multiple-Color} Optical Activation, Silencing, and Desynchronization of Neural Activity, with {Single-Spike} Temporal Resolution},
 	volume = {2},
@@ -1738,6 +1789,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	author = {Han, Xue and Boyden, Edward S.},
 	year = {2007},
 	pages = {e299}
+},
+
+@article{zhang_channelrhodopsin-2_2006,
+	title = {Channelrhodopsin-2 and optical control of excitable cells},
+	volume = {3},
+	issn = {1548-7091},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16990810},
+	doi = {10.1038/nmeth936},
+	abstract = {Electrically excitable cells are important in the normal functioning and in the pathophysiology of many biological processes. These cells are typically embedded in dense, heterogeneous tissues, rendering them difficult to target selectively with conventional electrical stimulation methods. The algal protein Channelrhodopsin-2 offers a new and promising solution by permitting minimally invasive, genetically targeted and temporally precise photostimulation. Here we explore technological issues relevant to the temporal precision, spatial targeting and physiological implementation of {ChR2}, in the context of other photostimulation approaches to optical control of excitable cells.},
+	number = {10},
+	journal = {Nature Methods},
+	author = {Zhang, Feng and Wang, {Li-Ping} and Boyden, Edward S and Deisseroth, Karl},
+	month = oct,
+	year = {2006},
+	note = {{PMID:} 16990810},
+	keywords = {Algal Proteins, Cell Membrane, Eukaryota, Light, Photochemistry, Sensory Rhodopsins},
+	pages = {785--792}
 },
 
 @article{gray_oxygen_2004,
@@ -2017,21 +2085,6 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {12651--12656}
 },
 
-@article{liewald_optogenetic_2008,
-	title = {Optogenetic analysis of synaptic function},
-	volume = {5},
-	issn = {1548-7091},
-	url = {http://dx.doi.org/10.1038/nmeth.1252},
-	doi = {10.1038/nmeth.1252},
-	number = {10},
-	journal = {Nat Meth},
-	author = {Liewald, Jana F and Brauner, Martin and Stephens, Greg J and Bouhours, Magali and Schultheis, Christian and Zhen, Mei and Gottschalk, Alexander},
-	month = oct,
-	year = {2008},
-	keywords = {{FromChris}, {ReadMe}},
-	pages = {895--902}
-},
-
 @misc{_wormatlas:_????-1,
 	title = {{WormAtlas:} {CEP}},
 	url = {http://www.wormatlas.org/neurons.htm/cep.htm},
@@ -2106,7 +2159,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {179--184}
 },
 
-@article{liewald_optogenetic_2008-1,
+@article{liewald_optogenetic_2008,
 	title = {Optogenetic analysis of synaptic function},
 	volume = {5},
 	issn = {1548-7091},
@@ -2146,6 +2199,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	month = feb,
 	year = {2007},
 	pages = {e15 EP --}
+},
+
+@article{stirman_high-throughput_2010,
+	title = {High-throughput study of synaptic transmission at the neuromuscular junction enabled by optogenetics and microfluidics},
+	volume = {191},
+	issn = {{1872-678X}},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20538016},
+	doi = {10.1016/j.jneumeth.2010.05.019},
+	abstract = {Over the past several years, optogenetic techniques have become widely used to help elucidate a variety of neuroscience problems. The unique optical control of neurons within a variety of organisms provided by optogenetics allows researchers to probe neural circuits and investigate neuronal function in a highly specific and controllable fashion. Recently, optogenetic techniques have been introduced to investigate synaptic transmission in the nematode Caenorhabditis elegans. For synaptic transmission studies, although quantitative, this technique is manual and very low-throughput. As it is, it is difficult to apply this technique to genetic studies. In this paper, we enhance this new tool by combining it with microfluidics technology and computer automation. This allows us to increase the assay throughput by several orders of magnitude as compared to the current standard approach, as well as improving standardization and consistency in data gathering. We also demonstrate the ability to infuse drugs to worms during optogenetic experiments using microfluidics. Together, these technologies will enable high-throughput genetic studies such as those of synaptic function.},
+	number = {1},
+	journal = {Journal of Neuroscience Methods},
+	author = {Stirman, Jeffrey N and Brauner, Martin and Gottschalk, Alexander and Lu, Hang},
+	month = aug,
+	year = {2010},
+	note = {{PMID:} 20538016},
+	keywords = {Animals, Caenorhabditis elegans, Excitatory Postsynaptic Potentials, Image Processing, {Computer-Assisted}, Inhibitory Postsynaptic Potentials, Microfluidics, Microscopy, Video, Neuromuscular Junction, Pattern Recognition, Automated, Photic Stimulation, Rhodopsin, Synaptic Transmission},
+	pages = {90--93}
 },
 
 @article{guo_optical_2009,
