steady progress on colbert chapter

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -43,3 +43,5 @@ Thesis Committee:
 	Florian Engert
 
 Franziska Graf.
+
+Typeset with \LaTeXe using a modified version of Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
