--- a/references.bib
+++ b/references.bib
@@ -40,6 +40,20 @@
 	pages = {163}
 },
 
+@article{bradski_opencv_2000,
+	title = {The {OpenCV} Library},
+	volume = {25},
+	issn = {{1044-789X}},
+	abstract = {{OpenCV} is an open-source, computer-vision library for extracting and processing meaningful data from images.
+ Additional resources include opencv.txt (listings).},
+	number = {11},
+	journal = {Dr. Dobb's Journal of Software Tools},
+	author = {Bradski, Gary},
+	month = nov,
+	year = {2000},
+	pages = {120, 122--125}
+},
+
 @misc{kaplan_foraging_2008,
 	title = {Foraging Information},
 	author = {Kaplan, Joshua},
