--- a/README
+++ b/README
@@ -40,7 +40,12 @@ xelatex  thesis.tex
 
 
 
+**** General Links ****
+Harvard Approved Binding Sites:
+http://www.lbibinders.org/index.php?option=com_content&view=article&id=32&Itemid=80
 
+Harvard Preferred Paper:
+http://www.universityproducts.com/cart.php?m=product_list&c=791&primary=1&navTree=&msg=1314731211&total=2
 
 *** An introduction ***
 
