Added fltpage, and new pdf figure 1
Fltpage allows me to seperate the figure from the caption. Its necessary for large figures.

--- a/harvard-thesis.cls
+++ b/harvard-thesis.cls
@@ -28,7 +28,11 @@
 \RequirePackage[tight,nice]{units}
 \RequirePackage{verbatim}
 \RequirePackage{url}
+
+%Andy's package additions
 \usepackage{pdfsync} %do pdf synchronization [andy]
+\usepackage[closeFloats]{fltpage}
+
 \synctex=1 % turn synctex on automatically to sync between pdf viewer [andy]
 
 
